feat: updated to java 17, spring boot 3, spring security 6, removed consul support (#17)
* feat: java 17, spring boot 3, spring security 6, consul support removed

* feat: update travis

* feat: debian recommendations